fix: created updatedVisiblity for visible geojson

--- a/frontend/src/components/utils/MapComponent.css
+++ b/frontend/src/components/utils/MapComponent.css
@@ -171,16 +171,11 @@
   font-weight: bold;
 }
 
-/* .fixed-action-btn {
+.fixed-action-btn {
   position: fixed;
   bottom: 20px;
   right:51%;
   z-index: 1000;
-} */
-
-.clip-button{
-  bottom: 20px;
-  right: 50%;
 }
 
 
